--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index"
+    "dev": "nodemon dist/index",
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.34",
+    "@types/uuid": "^8.3.4",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "nodemon": "^2.0.15",
+    "typescript": "^4.6.4",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
+    "@types/express-session": "^1.17.4"
   }
 }
