--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.34",
     "@types/uuid": "^8.3.4",
     "body-parser": "^1.20.0",
@@ -20,6 +21,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "mongoose": "^6.3.3",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.4",
     "uuid": "^8.3.2"
