--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.34",
     "@types/uuid": "^8.3.4",
+    "argon2": "^0.28.5",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
