--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.34",
+    "@types/node": "^17.0.35",
     "@types/uuid": "^8.3.4",
     "argon2": "^0.28.5",
     "body-parser": "^1.20.0",
@@ -25,7 +25,8 @@
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
