--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.35",
+    "@types/node": "^18.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
     "argon2": "^0.28.5",
     "body-parser": "^1.20.0",
@@ -23,10 +24,11 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.3.3",
+    "nodemailer": "^6.7.6",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.4",
     "uuid": "^8.3.2",
-    "yarn": "^1.22.18"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
