--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "stripe": "^9.11.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
